# service/api/api-handler.go
@@ -14,6 +14,7 @@ func (rt *_router) Handler() http.Handler {
 	// CHAT
 	rt.router.GET("/users/:user_id/chats", rt.getAllChats)                  // ok +
 	rt.router.GET("/users/:user_id/chats/:chat_id", rt.getMessagesFromChat) // ok +
+	rt.router.PUT("/users/:user_id/chats", rt.createNewChat) // <--
 	// GROUP
 	rt.router.PUT("/chats/:chat_id/photo", rt.putNewGroupPhoto)        // notok +
 	rt.router.PUT("/chats/:chat_id/members/:member_id", rt.addAMember) // ok +
@@ -22,8 +23,8 @@ func (rt *_router) Handler() http.Handler {
 	// MESSAGE
 	rt.router.POST("/chats/:chat_id/messages", rt.sendmessage)                   // ok +
 	rt.router.DELETE("/chats/:chat_id/messages/:message_id", rt.deleteMessage)                       // ok +
-	rt.router.PUT("/chats/:chat_id/messages/:message_id/reactions/:reaction_id", rt.commentMessage)   // ok +
-	rt.router.DELETE("/chats/:chat_id/messages/:message_id/reactions/:reaction_id", rt.deleteComment) // ok +
+	rt.router.PUT("/chats/:chat_id/messages/:message_id/reaction/:reaction_id", rt.commentMessage)   // ok +
+	rt.router.DELETE("/chats/:chat_id/messages/:message_id/reaction/:reaction_id", rt.deleteComment) // ok +
 	rt.router.POST("/chats/:chat_id/forwarded/:message_id", rt.forwardMessage)  // ok +
 	// MEDIA
 	rt.router.POST("/chats/:chat_id/media/:media_id", rt.sendMedia)     // notok -
